==> neeveecomm/lorawan-node/source/lorawan/boards/FRDM-KL25/rtc-board.c <==
#include <math.h>
#include <time.h>
#include "utilities.h"
#include "delay.h"
#include "board.h"
#include "boardapi.h"
#include "timer.h"
#include "systime.h"
#include "gpio.h"
#include "lpm-board.h"
#include "rtc-board.h"
#include "fsl_rtc.h"
#include "fsl_pit.h"
#define MIN_ALARM_DELAY                             100 // in ticks
#define N_PREDIV_S                                  10
#define PREDIV_S                                    ( ( 1 << N_PREDIV_S ) - 1 )
#define PREDIV_A                                    ( 1 << ( 15 - N_PREDIV_S ) ) - 1
#define USEC_NUMBER                                 1000000
#define MSEC_NUMBER                                 ( USEC_NUMBER / 1000 )
#define COMMON_FACTOR                               3
#define CONV_NUMER                                  ( MSEC_NUMBER >> COMMON_FACTOR )
#define CONV_DENOM                                  ( 1 << ( N_PREDIV_S - COMMON_FACTOR ) )
#define DAYS_IN_LEAP_YEAR                           ( ( uint32_t )  366U )
#define DAYS_IN_YEAR                                ( ( uint32_t )  365U )
#define SECONDS_IN_1DAY                             ( ( uint32_t )86400U )
#define SECONDS_IN_1HOUR                            ( ( uint32_t ) 3600U )
#define SECONDS_IN_1MINUTE                          ( ( uint32_t )   60U )
#define MINUTES_IN_1HOUR                            ( ( uint32_t )   60U )
#define HOURS_IN_1DAY                               ( ( uint32_t )   24U )

void RtcInit( void )
{
	rtc_config_t rtcCfg = {0};
	rtc_datetime_t rtcDate = {0};

	if(RtcInitialized == false) {
	    /* Structure of initialize PIT */
	    pit_config_t pitConfig;

	    /*
	     * pitConfig.enableRunInDebug = false;
	     */
	    PIT_GetDefaultConfig(&pitConfig);

	    /* Init pit module */
	    PIT_Init(PIT, &pitConfig);

	    /* Set timer period for channel 0 */
	    PIT_SetTimerPeriod(PIT, kPIT_Chnl_0, USEC_TO_COUNT(100U, PIT_SOURCE_CLOCK));

	    /* Enable timer interrupts for channel 0 */
	    PIT_EnableInterrupts(PIT, kPIT_Chnl_0, kPIT_TimerInterruptEnable);

	    /* Enable at the NVIC */
	    EnableIRQ(PIT_IRQ_ID);

	    /* Start channel 0 */
	    PIT_StartTimer(PIT, kPIT_Chnl_0);

        RtcTimerContext.AlarmState = ALARM_STOPPED;
		RtcSetTimerContext( );
		RtcInitialized = true;
	}
}

void RtcStopAlarm( void )
{
	RtcTimerContext.AlarmState = ALARM_STOPPED;
}

void RtcStartAlarm( uint32_t timeout )
{
    CRITICAL_SECTION_BEGIN( );

    RtcStopAlarm( );

    RtcTimerContext.Delay = timeout;

    alarmTimeout = (RtcTimerContext.Time + RtcTimerContext.Delay);

    RtcTimeoutPendingInterrupt = true;
    RtcTimeoutPendingPolling = false;

    RtcTimerContext.AlarmState = ALARM_RUNNING;
    if( pitTimerCnt > (RtcTimerContext.Time + RtcTimerContext.Delay))
    {
        // If timer already passed
        if( RtcTimeoutPendingInterrupt == true )
        {
            // And interrupt not handled, mark as polling
            RtcTimeoutPendingPolling = true;
            RtcTimeoutPendingInterrupt = false;
        }
    }
    CRITICAL_SECTION_END( );
}
